# pico_projects

./: .gitignore  CMakeLists.txt  README.md  generic.c  mycmake.sh  pico-gen-project.sh
blink/: CMakeLists.txt  blink.c
